--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -92,24 +92,20 @@
   }
 
   .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
     padding-top: 30px;
     row-gap: 14px;
     column-gap: 10px;
+    justify-items: center;
   }
 
   .profile__title {
     font-size: 22px;
-    text-align: center;
+    max-width: 100%;
   }
 
   .profile__paragraph {
     font-size: 14px;
-    width: 100%;
-    text-align: center;
+    max-width: 100%;
   }
 
   .profile__add-button {
@@ -123,10 +119,5 @@
   .profile__edit-button {
     width: 18px;
     height: 18px;
-  }
-}
-
-@media screen and (min-width: 581px) and (max-width: 945px) {
-  .profile {
   }
 }
